<resources>
    <string name="app_name">همپا</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="splash_text">هدف ما پیشرفت است.</string>
    <string name="splash_logo_description">لوگو</string>
    <string name="circleSmallGreen">circleSmallGreen</string>
    <string name="circlePurple">circlePurple</string>
    <string name="circleRed">circleRed</string>
    <string name="circleLightBlue">circleLightBlue</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="profile_header">پروفایل من</string>
    <string name="profile_submit">اعمال</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_content">محتوا</string>
    <string name="dashboard_content_text">آزمون ها</string>
    <string name="scholarships">بورسیه</string>
    <string name="lessonExams">آزمون های درس به درس</string>
    <string name="helper_books">کتاب های کمک درسی</string>
    <string name="giftExam">آزمون های جایزه دار</string>
    <string name="discountCodes">کدهای تخفیف</string>
    <string name="myProfile">پروفایل من</string>
    <string name="myExams">آزمون های من</string>
    <string name="counterKonkurDay">روز شمار کنکور</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="location">استان . شهر</string>
    <string name="myWallet">کیف پول من</string>
    <string name="mainPage">صفحه اصلی</string>

    <!-- TODO: help for understand-->
    <string name="incompleteFullName">نام و نام خانوادگیتو به ما نگفتی. میتونی از قسمت حساب کاربری بگی.</string>
    <string name="grade">پایه</string>
    <string name="tenth">دهم</string>
    <string name="eleventh">یازدهم</string>
    <string name="twelfth">دوازدهم</string>
    <string name="orientation">گرایش</string>
    <string name="mathematics">ریاضی فیزیک</string>
    <string name="experimental">تجربی</string>
    <string name="human_discipline">انسانی</string>
    <string name="endOfLoadingList">بارگذاری تمام شد...</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</string>
    <string name="cart">سبد خرید</string>
    <string name="payByWallet">پرداخت از طریق کیف پول</string>
    <string name="submit">اعمال</string>
    <string name="transactionsList">لیست پرداخت ها</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="myLessonExam">آزمون های درس به درس من</string>
    <string name="takeExam">شرکت در آزمون</string>
    <string name="cartIsEmpty">در سبد خرید شما آزمونی وجود ندارد</string>
    <string name="serverError">مشکلی در سامانه پیش آمده</string>
    <string name="aboutHamta">درباه همتا</string>
    <string name="contactUs">تماس با ما</string>
    <string name="generalExams">آزمون های جامع</string>
    <string name="onlineBooks">کلاس های آنلاین</string>
    <string name="discussion">بحث و گفت و گو</string>
    <string name="doneExam">ارسال پاسخ ها و اتمام آزمون</string>
    <string name="meAndAdviser">من و مشاورم</string>
    <string name="timeToKonkur">فرصتی تا کنکور</string>
    <string name="teacherIntroduce">معرفی دبیر</string>
    <string name="fun">بازی و سرگرمی</string>
    <string name="wrongAnswers">پاسخ های نادرست</string>
    <string name="correctAnswers">پاسخ های درست</string>
    <string name="noAnswers">بدون پاسخ</string>
    <string name="allQuestions">تعداد سوالات</string>
    <string name="result_created_at">تاربخ شرکت در آزمون</string>
    <string name="hamtaTeam">تیم همتا تشکیل شده از اساتید مجرب در زمینه کنکور هتسش.</string>
    <string name="scholarshipGuide">در صورت نیاز به ارسال عکس یا فایل لطفا از طریق وبسایت این کار را انجام دهید.</string>


</resources>
