<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".fragment.profileChild.MyProfileFragment">

    <!-- light blue-->
    <ImageView
        android:id="@+id/circleLightBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/circleLightBlue"
        android:src="@drawable/ic_circle_light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- purple -->
    <ImageView
        android:id="@+id/circlePurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle_purple"
        android:contentDescription="@string/circlePurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- small Green -->
    <ImageView
        android:id="@+id/circleSmallGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:src="@drawable/ic_circle_green_small"
        android:contentDescription="@string/circleSmallGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <!-- Red -->
    <ImageView
        android:id="@+id/circleRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle_red"
        android:contentDescription="@string/circleRed"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="@dimen/space"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ir.vanda.hampa.component.VandaTextView
                android:id="@+id/vandaTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space"
                android:text="@string/profile_header"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                app:fontName="iranSansMedium" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="60dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">


                    <ir.vanda.hampa.component.VandaInput
                        android:id="@+id/name"
                        style="@style/profile_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconImage="@drawable/ic_name"
                        app:hint="نام" />

                    <ir.vanda.hampa.component.VandaInput
                        android:id="@+id/family"
                        style="@style/profile_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconImage="@drawable/ic_name"
                        app:hint="نام خانوادگی" />

                    <ir.vanda.hampa.component.VandaInput
                        android:id="@+id/email"
                        android:visibility="gone"
                        style="@style/profile_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:iconImage="@drawable/ic_mail"
                        app:hint="ایمیل" />

                    <ir.vanda.hampa.component.VandaInput
                        android:id="@+id/nationalCode"
                        style="@style/profile_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconImage="@drawable/ic_nationalcode"
                        app:hint="کد ملی" />


                    <ir.vanda.hampa.component.VandaSelectBox
                        android:id="@+id/gradeSelect"
                        style="@style/profile_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="مقطع" />


                    <ir.vanda.hampa.component.VandaSelectBox
                        android:id="@+id/orientationSelect"
                        style="@style/profile_input"
                        android:layout_width="match_parent"
                        app:hint="گرایش" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ir.vanda.hampa.component.VandaTextView
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_auth_tab_item"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:padding="@dimen/space"
        android:text="@string/profile_submit"
        android:textColor="#fff"
        android:textSize="18sp"
        android:translationZ="2dp"
        app:fontName="iranSansMedium"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="UnusedAttribute" />


    <ir.vanda.hampa.component.HampaLoader
        android:id="@+id/hampaLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:translationZ="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>