<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <!-- statusBar -->
    <ir.vanda.hampa.component.StatusBar
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="4dp"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:translationZ="3dp"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/toolbarHover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="#e9e9e9" />


        <RelativeLayout
            android:id="@+id/toolbarContent"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent">


        </RelativeLayout>


    </RelativeLayout>


    <!-- profileImage -->
    <RelativeLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/books" />

        <View
            android:id="@+id/fgBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="#e9e9e9" />

    </RelativeLayout>


    <!-- content => scrollView -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nesterScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="290dp"
        android:translationZ="2dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_profile_scroll"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="@dimen/halfSpace"
            android:paddingTop="@dimen/doubleSpace"
            android:paddingEnd="@dimen/halfSpace">

            <!-- name -->
            <ir.vanda.hampa.component.VandaTextView
                android:id="@+id/fullNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/halfSpace"
                android:paddingEnd="@dimen/halfSpace"
                android:text="@string/fullName"
                android:textColor="@color/colorTextPrimary"
                android:textSize="22sp"
                app:fontName="iranSansMedium" />

            <!-- location -->
            <ir.vanda.hampa.component.VandaTextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/halfSpace"
                android:paddingEnd="@dimen/halfSpace"
                android:text="@string/location"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp"
                app:fontName="iranSansLight" />


            <!-- menu -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/halfSpace"
                android:layout_marginTop="@dimen/doubleSpace"
                android:layout_marginEnd="@dimen/halfSpace"
                app:cardCornerRadius="@dimen/radius"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- topRow -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- topLeft -->
                        <LinearLayout
                            android:id="@+id/transactionLayout"
                            style="@style/ProfileItemMenu">

                            <ImageView
                                style="@style/ProfileItemMenuIcon"
                                android:src="@drawable/ic_payment" />

                            <ir.vanda.hampa.component.VandaTextView
                                style="@style/ProfileItemMenuTitle"
                                android:text="پرداخت ها" />

                        </LinearLayout>


                        <!-- topCenter -->
                        <LinearLayout
                            android:id="@+id/discountLayout"
                            style="@style/ProfileItemMenu">

                            <ImageView
                                style="@style/ProfileItemMenuIcon"
                                android:src="@drawable/ic_discount" />
                            <ir.vanda.hampa.component.VandaTextView
                                style="@style/ProfileItemMenuTitle"
                                android:text="@string/discountCodes" />

                        </LinearLayout>


                        <!-- topRight -->
                        <LinearLayout
                            android:id="@+id/myExamLayout"
                            style="@style/ProfileItemMenu">

                            <ImageView
                                style="@style/ProfileItemMenuIcon"
                                android:src="@drawable/ic_exam" />

                            <ir.vanda.hampa.component.VandaTextView
                                style="@style/ProfileItemMenuTitle"
                                android:text="@string/myExams" />

                        </LinearLayout>


                    </LinearLayout>


                    <!-- separateLine -->
                    <View
                        style="@style/Line"
                        android:layout_marginStart="@dimen/space"
                        android:layout_marginTop="@dimen/halfSpace"
                        android:layout_marginEnd="@dimen/space"
                        android:layout_marginBottom="@dimen/halfSpace"
                        />

                    <!-- bottomRow -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/halfSpace">

                        <!-- bottomLeft -->
                        <LinearLayout
                            style="@style/ProfileItemMenu">

                            <ImageView
                                style="@style/ProfileItemMenuIcon"
                                android:src="@drawable/ic_contact_us" />

                            <ir.vanda.hampa.component.VandaTextView
                                style="@style/ProfileItemMenuTitle"
                                android:text="@string/contactUs" />

                        </LinearLayout>



                        <!-- bottomCenter -->
                        <LinearLayout
                            android:id="@+id/aboutHamtaLayout"
                            style="@style/ProfileItemMenu">

                            <ImageView
                                style="@style/ProfileItemMenuIcon"
                                android:src="@drawable/ic_friends" />

                            <ir.vanda.hampa.component.VandaTextView
                                style="@style/ProfileItemMenuTitle"
                                android:text="@string/aboutHamta" />

                        </LinearLayout>


                        <!-- bottomRight -->
                        <LinearLayout
                            android:id="@+id/myProfileLayout"
                            style="@style/ProfileItemMenu">

                            <ImageView
                                style="@style/ProfileItemMenuIcon"
                                android:src="@drawable/ic_profile"
                                android:tint="#ff9057" />

                            <ir.vanda.hampa.component.VandaTextView
                                style="@style/ProfileItemMenuTitle"
                                android:text="@string/myProfile" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="500dp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>